--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ranta-fans",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "仅sp-tee-biz仓库在git commit时使用",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "keywords": [
     "小店海报"
   ],
-  "author": "yipanyangguang@youzan.com",
+  "author": "zhangwenxiang@youzan.com",
   "license": "ISC",
   "bin": {
     "ranta-fans": "/index.js"
